ApiGateway ProductSrv Create Gettall Getid success
