# ApiGateway/models/product.go
@@ -1,0 +1,21 @@
+package models
+
+type CreateProductReq struct {
+	Name     string  `json:"name"`
+	Price    float64 `json:"price"`
+	Category string  `json:"category"`
+}
+
+type GetAllProductRes struct {
+	ID       uint64  `json:"id"`
+	Name     string  `json:"name"`
+	Price    float64 `json:"price"`
+	Category string  `json:"category"`
+}
+
+type GetProductIDRes struct {
+	ID       uint64  `json:"id"`
+	Name     string  `json:"name"`
+	Price    float64 `json:"price"`
+	Category string  `json:"category"`
+}
